sessions/03-ingress/subsessions/10-optional-contour-envoy-ingress/01-message-board-ingress-contour.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-board-ingress-contour
  namespace: tb-app-ingress
spec:
  ingressClassName: contour
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001
          - path: /api/apps
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 5002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
